fixtures/semantic/invalid/09-vr-sl5-slot-at-comp-body.fl
component TopLevelSlot {
  slot title: text
  surface {}
}
